Colaboratory를 통해 생성됨 - DataFrame : 데이터 조회, 변경

--- a/Class4.ipynb
+++ b/Class4.ipynb
@@ -792,28 +792,64 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1-LVf17-IQS0"
+        "id": "1-LVf17-IQS0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f4e39a93-98df-4926-fdf0-828f572cfc50"
       },
       "source": [
         "# 인덱싱 기법으로 열 데이터 조회 실습\n",
         "print('Columns : name')\n",
         "print(df['name'])"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Columns : name\n",
+            "0    Jessi\n",
+            "1     Emma\n",
+            "2     Alex\n",
+            "3    Jessi\n",
+            "4      Tom\n",
+            "Name: name, dtype: object\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "T4iomF6QIgbg"
+        "id": "T4iomF6QIgbg",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "969348f2-9027-4fa3-8a55-15368b7fa34a"
       },
       "source": [
         "# . 연산자로 열 데이터 조회 실습\n",
         "print('Columns : name')\n",
-        "_______________"
+        "print(df.name)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Columns : name\n",
+            "0    Jessi\n",
+            "1     Emma\n",
+            "2     Alex\n",
+            "3    Jessi\n",
+            "4      Tom\n",
+            "Name: name, dtype: object\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -830,15 +866,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eRdalyI7IzvQ"
+        "id": "eRdalyI7IzvQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d42d60bc-9851-462e-c85c-42ddffed5846"
       },
       "source": [
         "# 다중 열 데이터 조회 실습\n",
         "print('Columns : name-subject-grade')\n",
-        "_____________________"
+        "print(df[['name', 'subject', 'grade']])"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Columns : name-subject-grade\n",
+            "    name subject grade\n",
+            "0  Jessi  python     A\n",
+            "1   Emma    java     A\n",
+            "2   Alex  python     B\n",
+            "3  Jessi       c     B\n",
+            "4    Tom    java     A\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -857,47 +911,170 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tpBpAQIUJN3P"
+        "id": "tpBpAQIUJN3P",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "282927ea-23ac-4fee-a988-190e5ddbec14"
       },
       "source": [
         "# loc 이용하여 행 데이터 조회 실습\n",
         "print('Rows-1')\n",
-        "_____________________"
+        "print(df.loc[1])"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Rows-1\n",
+            "name       Emma\n",
+            "subject    java\n",
+            "score        95\n",
+            "grade         A\n",
+            "etc         NaN\n",
+            "Name: 1, dtype: object\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7-1KRarJJOt_"
+        "id": "7-1KRarJJOt_",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 162
+        },
+        "outputId": "7666774d-ae4f-4d63-c63d-c6f0ea1729f7"
       },
       "source": [
         "# loc 이용하여 다중 행 데이터 조회 실습\n",
         "print('Rows-0,2,4')\n",
         "df.loc[[0,2,4]]"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Rows-0,2,4\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>name</th>\n",
+              "      <th>subject</th>\n",
+              "      <th>score</th>\n",
+              "      <th>grade</th>\n",
+              "      <th>etc</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Jessi</td>\n",
+              "      <td>python</td>\n",
+              "      <td>100</td>\n",
+              "      <td>A</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Alex</td>\n",
+              "      <td>python</td>\n",
+              "      <td>80</td>\n",
+              "      <td>B</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Tom</td>\n",
+              "      <td>java</td>\n",
+              "      <td>97</td>\n",
+              "      <td>A</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    name subject  score grade  etc\n",
+              "0  Jessi  python    100     A  NaN\n",
+              "2   Alex  python     80     B  NaN\n",
+              "4    Tom    java     97     A  NaN"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 27
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aTtp3SlhJU2C"
+        "id": "aTtp3SlhJU2C",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "73375cfe-5b30-479f-83c0-254513b9f47b"
       },
       "source": [
         "# 특정 행 데이터 변경 실습\n",
         "print('Modify Rows0')\n",
-        "_______________ = ['Jessi', 'java', 70, 'C', 1]\n",
-        "df"
+        "df.loc[0] = ['Jessi', 'java', 70, 'C', 1]\n",
+        "print(df)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Modify Rows0\n",
+            "    name subject  score grade  etc\n",
+            "0  Jessi    java     70     C    1\n",
+            "1   Emma    java     95     A  NaN\n",
+            "2   Alex  python     80     B  NaN\n",
+            "3  Jessi       c     85     B  NaN\n",
+            "4    Tom    java     97     A  NaN\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LeVe9022IUBd"
+        "id": "LeVe9022IUBd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f3ea4bce-59cb-4428-c554-e54aa269e44e"
       },
       "source": [
         "# 행과 열의 조건을 동시에 지정하여 조회 실습\n",
@@ -905,10 +1082,22 @@
         "col_idx = ['name', 'subject', 'grade']\n",
         "\n",
         "print('Rows & Columns')\n",
-        "_______________"
+        "print(df.loc[row_idx, col_idx])"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Rows & Columns\n",
+            "   name subject grade\n",
+            "1  Emma    java     A\n",
+            "2  Alex  python     B\n",
+            "4   Tom    java     A\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
