Colaboratory를 통해 생성됨 - 데이터 파일 읽기

--- a/Class4.ipynb
+++ b/Class4.ipynb
@@ -1989,88 +1989,484 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eVGnPfk_Ko33"
+        "id": "eVGnPfk_Ko33",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9bbf409a-1740-4735-93d0-26b062e1673e"
       },
       "source": [
-        "filepath = '______________________'\n",
+        "filepath = '/content/titanic.csv'\n",
         "\n",
-        "titanic_df = ____________________\n",
+        "titanic_df = pd.read_csv(filepath)\n",
         "type(titanic_df)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "pandas.core.frame.DataFrame"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 44
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9vZMt3zLLqMi"
+        "id": "9vZMt3zLLqMi",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "dc1b0d69-08b5-4e39-bdaa-ef256304d422"
       },
       "source": [
         "# info() 확인해보기\n",
         "print('Summary of DataFrame')\n",
-        "____________________"
+        "titanic_df.info()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Summary of DataFrame\n",
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 891 entries, 0 to 890\n",
+            "Data columns (total 12 columns):\n",
+            " #   Column       Non-Null Count  Dtype  \n",
+            "---  ------       --------------  -----  \n",
+            " 0   PassengerId  891 non-null    int64  \n",
+            " 1   Survived     891 non-null    int64  \n",
+            " 2   Pclass       891 non-null    int64  \n",
+            " 3   Name         891 non-null    object \n",
+            " 4   Sex          891 non-null    object \n",
+            " 5   Age          714 non-null    float64\n",
+            " 6   SibSp        891 non-null    int64  \n",
+            " 7   Parch        891 non-null    int64  \n",
+            " 8   Ticket       891 non-null    object \n",
+            " 9   Fare         891 non-null    float64\n",
+            " 10  Cabin        204 non-null    object \n",
+            " 11  Embarked     889 non-null    object \n",
+            "dtypes: float64(2), int64(5), object(5)\n",
+            "memory usage: 83.7+ KB\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bnEkYB5EWHym"
+        "id": "bnEkYB5EWHym",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c511157d-e2aa-4ca2-c301-6ff82089fce0"
       },
       "source": [
         "# sample 데이터 출력해보기\n",
         "print('Return the first n rows')\n",
-        "____________________"
+        "print(titanic_df.head(5))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Return the first n rows\n",
+            "   PassengerId  Survived  Pclass  ...     Fare Cabin  Embarked\n",
+            "0            1         0       3  ...   7.2500   NaN         S\n",
+            "1            2         1       1  ...  71.2833   C85         C\n",
+            "2            3         1       3  ...   7.9250   NaN         S\n",
+            "3            4         1       1  ...  53.1000  C123         S\n",
+            "4            5         0       3  ...   8.0500   NaN         S\n",
+            "\n",
+            "[5 rows x 12 columns]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uZaVp91sWPHs"
+        "id": "uZaVp91sWPHs",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 225
+        },
+        "outputId": "214c76c5-6b91-4196-eacb-e0d58e33430f"
       },
       "source": [
         "# 엑셀 파일에서 데이터 읽기\n",
-        "filepath2 = _____________________\n",
+        "filepath2 = '/content/students_score.xlsx'\n",
         "print('Read students_score.xlsx')\n",
-        "sample_df = ________________________\n",
+        "sample_df = pd.read_excel(filepath2)\n",
         "sample_df"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Read students_score.xlsx\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Jessi</th>\n",
+              "      <th>20</th>\n",
+              "      <th>100</th>\n",
+              "      <th>A</th>\n",
+              "      <th>python</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Emma</td>\n",
+              "      <td>24</td>\n",
+              "      <td>95</td>\n",
+              "      <td>A</td>\n",
+              "      <td>java</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Alex</td>\n",
+              "      <td>23</td>\n",
+              "      <td>80</td>\n",
+              "      <td>B</td>\n",
+              "      <td>python</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Jessi</td>\n",
+              "      <td>20</td>\n",
+              "      <td>85</td>\n",
+              "      <td>B</td>\n",
+              "      <td>c</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Tom</td>\n",
+              "      <td>27</td>\n",
+              "      <td>97</td>\n",
+              "      <td>A</td>\n",
+              "      <td>java</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Sia</td>\n",
+              "      <td>28</td>\n",
+              "      <td>79</td>\n",
+              "      <td>C</td>\n",
+              "      <td>python</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   Jessi  20  100  A  python\n",
+              "0   Emma  24   95  A    java\n",
+              "1   Alex  23   80  B  python\n",
+              "2  Jessi  20   85  B       c\n",
+              "3    Tom  27   97  A    java\n",
+              "4    Sia  28   79  C  python"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 47
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IwGt1nLsWXiQ"
+        "id": "IwGt1nLsWXiQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 256
+        },
+        "outputId": "7c671406-03ce-459a-9745-57f23b5a52b1"
       },
       "source": [
         "# 1) header=none 옵션으로 컬럼 없이 데이터 읽기\n",
         "# 2) df.columns 에 새로운 컬럼명 저장하기\n",
-        "sample_df = ____________________________\n",
-        "____________________ = ['name', 'age', 'score', 'grade', 'subject']\n",
+        "sample_df = pd.read_excel(filepath2, header=None)\n",
+        "sample_df.columns = ['name', 'age', 'score', 'grade', 'subject']\n",
         "\n",
         "print('Read Excel by header=none')\n",
         "sample_df"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Read Excel by header=none\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>name</th>\n",
+              "      <th>age</th>\n",
+              "      <th>score</th>\n",
+              "      <th>grade</th>\n",
+              "      <th>subject</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Jessi</td>\n",
+              "      <td>20</td>\n",
+              "      <td>100</td>\n",
+              "      <td>A</td>\n",
+              "      <td>python</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Emma</td>\n",
+              "      <td>24</td>\n",
+              "      <td>95</td>\n",
+              "      <td>A</td>\n",
+              "      <td>java</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Alex</td>\n",
+              "      <td>23</td>\n",
+              "      <td>80</td>\n",
+              "      <td>B</td>\n",
+              "      <td>python</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Jessi</td>\n",
+              "      <td>20</td>\n",
+              "      <td>85</td>\n",
+              "      <td>B</td>\n",
+              "      <td>c</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Tom</td>\n",
+              "      <td>27</td>\n",
+              "      <td>97</td>\n",
+              "      <td>A</td>\n",
+              "      <td>java</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>Sia</td>\n",
+              "      <td>28</td>\n",
+              "      <td>79</td>\n",
+              "      <td>C</td>\n",
+              "      <td>python</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    name  age  score grade subject\n",
+              "0  Jessi   20    100     A  python\n",
+              "1   Emma   24     95     A    java\n",
+              "2   Alex   23     80     B  python\n",
+              "3  Jessi   20     85     B       c\n",
+              "4    Tom   27     97     A    java\n",
+              "5    Sia   28     79     C  python"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 48
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "f7gQlyXzWh2F"
+        "id": "f7gQlyXzWh2F",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 256
+        },
+        "outputId": "dcadb388-9cc6-4cb2-cae0-d34d3d40b676"
       },
       "source": [
         "# 'students' sheet 에 있는 데이터 읽기\n",
         "print('Read Excel on students sheet')\n",
-        "student_df = ____________________________\n",
+        "student_df = pd.read_excel(filepath2, sheet_name='students')\n",
         "student_df"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Read Excel on students sheet\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>name</th>\n",
+              "      <th>age</th>\n",
+              "      <th>etc1</th>\n",
+              "      <th>etc2</th>\n",
+              "      <th>etc3</th>\n",
+              "      <th>email</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Lee</td>\n",
+              "      <td>25</td>\n",
+              "      <td>0.1</td>\n",
+              "      <td>0.1</td>\n",
+              "      <td>0.1</td>\n",
+              "      <td>lee@codepresso.kr</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Hwang</td>\n",
+              "      <td>24</td>\n",
+              "      <td>0.1</td>\n",
+              "      <td>0.1</td>\n",
+              "      <td>0.1</td>\n",
+              "      <td>hwang@codepresso.kr</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Kim</td>\n",
+              "      <td>28</td>\n",
+              "      <td>0.1</td>\n",
+              "      <td>0.1</td>\n",
+              "      <td>0.1</td>\n",
+              "      <td>kim@codepresso.kr</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Choi</td>\n",
+              "      <td>27</td>\n",
+              "      <td>0.1</td>\n",
+              "      <td>0.1</td>\n",
+              "      <td>0.1</td>\n",
+              "      <td>choi@codepresso.kr</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Park</td>\n",
+              "      <td>21</td>\n",
+              "      <td>0.1</td>\n",
+              "      <td>0.1</td>\n",
+              "      <td>0.1</td>\n",
+              "      <td>park@codepresso.kr</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>Lim</td>\n",
+              "      <td>20</td>\n",
+              "      <td>0.1</td>\n",
+              "      <td>0.1</td>\n",
+              "      <td>0.1</td>\n",
+              "      <td>lim@codepresso.kr</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    name  age  etc1  etc2  etc3                email\n",
+              "0    Lee   25   0.1   0.1   0.1    lee@codepresso.kr\n",
+              "1  Hwang   24   0.1   0.1   0.1  hwang@codepresso.kr\n",
+              "2    Kim   28   0.1   0.1   0.1    kim@codepresso.kr\n",
+              "3   Choi   27   0.1   0.1   0.1   choi@codepresso.kr\n",
+              "4   Park   21   0.1   0.1   0.1   park@codepresso.kr\n",
+              "5    Lim   20   0.1   0.1   0.1    lim@codepresso.kr"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 50
+        }
+      ]
     },
     {
       "cell_type": "markdown",
