Colaboratory를 통해 생성됨 - 데이터 전처리 : 결측치의 처리

--- a/Class4.ipynb
+++ b/Class4.ipynb
@@ -2493,7 +2493,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ew4EjJLQiAnJ",
-        "outputId": "fba5d26f-4a05-47d9-c816-d5658ecd33c5"
+        "outputId": "32a0ec7a-fc0f-452b-a74e-efbdadf22207"
       },
       "source": [
         "import pandas as pd\n",
@@ -2511,7 +2511,7 @@
         "# 실습 데이터 출력\n",
         "print(df)"
       ],
-      "execution_count": null,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
@@ -2531,52 +2531,236 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dvydmxI1jiWe"
+        "id": "dvydmxI1jiWe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0561344d-9de3-4b4b-db8d-7ace46787282"
       },
       "source": [
         "# df.info() 함수로 결측치 유무 확인하기\n",
         "print('#1 Summary of DataFrame')\n",
-        "___________________"
+        "df.info()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "#1 Summary of DataFrame\n",
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "Index: 6 entries, a to f\n",
+            "Data columns (total 4 columns):\n",
+            " #   Column  Non-Null Count  Dtype  \n",
+            "---  ------  --------------  -----  \n",
+            " 0   col1    5 non-null      float64\n",
+            " 1   col2    5 non-null      float64\n",
+            " 2   col3    5 non-null      float64\n",
+            " 3   col4    2 non-null      float64\n",
+            "dtypes: float64(4)\n",
+            "memory usage: 400.0+ bytes\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8tXxWDoqHiPw"
+        "id": "8tXxWDoqHiPw",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 256
+        },
+        "outputId": "deefd2c1-7e72-4402-8027-fd6a149578b0"
       },
       "source": [
         "# df.isnull() 함수로 결측치 유무 확인하기\n",
         "print('#2 isnull of DataFrame')\n",
-        "___________________\n"
+        "df.isnull()\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "#2 isnull of DataFrame\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>col1</th>\n",
+              "      <th>col2</th>\n",
+              "      <th>col3</th>\n",
+              "      <th>col4</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>a</th>\n",
+              "      <td>False</td>\n",
+              "      <td>False</td>\n",
+              "      <td>False</td>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>b</th>\n",
+              "      <td>False</td>\n",
+              "      <td>False</td>\n",
+              "      <td>False</td>\n",
+              "      <td>True</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>c</th>\n",
+              "      <td>True</td>\n",
+              "      <td>True</td>\n",
+              "      <td>True</td>\n",
+              "      <td>True</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>d</th>\n",
+              "      <td>False</td>\n",
+              "      <td>False</td>\n",
+              "      <td>False</td>\n",
+              "      <td>True</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>e</th>\n",
+              "      <td>False</td>\n",
+              "      <td>False</td>\n",
+              "      <td>False</td>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>f</th>\n",
+              "      <td>False</td>\n",
+              "      <td>False</td>\n",
+              "      <td>False</td>\n",
+              "      <td>True</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    col1   col2   col3   col4\n",
+              "a  False  False  False  False\n",
+              "b  False  False  False   True\n",
+              "c   True   True   True   True\n",
+              "d  False  False  False   True\n",
+              "e  False  False  False  False\n",
+              "f  False  False  False   True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 53
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PiStPJsxjdrp"
+        "id": "PiStPJsxjdrp",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e74d6c85-0b8e-49eb-cdfb-4aefff5c9a55"
       },
       "source": [
         "print('#4 Sum of all missing values per columns')\n",
         "df.isnull().sum()\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "#4 Sum of all missing values per columns\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "col1    1\n",
+              "col2    1\n",
+              "col3    1\n",
+              "col4    4\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 54
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "b6uRlTlHHqCK"
+        "id": "b6uRlTlHHqCK",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b91f714e-9be9-4ef3-e8ef-042a0e9af1b3"
       },
       "source": [
         "print('#5 Sum of all missing values per rows')\n",
-        "___________________"
+        "df.isnull().sum(axis=1)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "#5 Sum of all missing values per rows\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "a    0\n",
+              "b    1\n",
+              "c    4\n",
+              "d    1\n",
+              "e    0\n",
+              "f    1\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 55
+        }
+      ]
     },
     {
       "cell_type": "markdown",
