Colaboratory를 통해 생성됨 - Pandas 의 집계함수

--- a/Class4.ipynb
+++ b/Class4.ipynb
@@ -3821,13 +3821,141 @@
         "id": "exfi6LlawlAz"
       },
       "source": [
-        ""
+        "### Pandas의 집계함수"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6I_sIRTEwj-Y"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6I_sIRTEwj-Y",
+        "outputId": "a871a805-70c4-4ff4-9269-8ff76a005d7b"
+      },
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "\n",
+        "# 실습 데이터 생성\n",
+        "score = {'sub1': [3, 9, 1, 1, 9], \n",
+        "         'sub2': [2, 9, np.nan, np.nan, 8], \n",
+        "         'sub3': [np.nan, 1, 5, 5, 7], \n",
+        "         'sub4': [np.nan, 3, np.nan, 1, np.nan]}\n",
+        "\n",
+        "df = pd.DataFrame(data=score)\n",
+        "print(df)"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "   sub1  sub2  sub3  sub4\n",
+            "0     3   2.0   NaN   NaN\n",
+            "1     9   9.0   1.0   3.0\n",
+            "2     1   NaN   5.0   NaN\n",
+            "3     1   NaN   5.0   1.0\n",
+            "4     9   8.0   7.0   NaN\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "c5jXWWpFxOKx",
+        "outputId": "10725a80-4e02-40df-93d0-29951ea4c895"
+      },
+      "source": [
+        "print('\\n#1 Count Function')\n",
+        "print(df.count())"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "#1 Count Function\n",
+            "sub1    5\n",
+            "sub2    3\n",
+            "sub3    4\n",
+            "sub4    2\n",
+            "dtype: int64\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "94rbT1AhxUaj",
+        "outputId": "ade5707a-730c-4e49-9b9a-d5758b5b38e6"
+      },
+      "source": [
+        "print('\\n#3 Sum Function')\n",
+        "print(df.sum())"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "#3 Sum Function\n",
+            "sub1    23.0\n",
+            "sub2    19.0\n",
+            "sub3    18.0\n",
+            "sub4     4.0\n",
+            "dtype: float64\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nDCsAQv3xc-y",
+        "outputId": "1e9f85bc-9876-44a4-b35b-c03947658e71"
+      },
+      "source": [
+        "print('\\n#4 Sum Function with skipna')\n",
+        "print(df.sum(skipna=False))"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "#4 Sum Function with skipna\n",
+            "sub1    23.0\n",
+            "sub2     NaN\n",
+            "sub3     NaN\n",
+            "sub4     NaN\n",
+            "dtype: float64\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kzyUMDUcxiHB"
       },
       "source": [
         ""
